retrieveUnpackaged/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Complaint__c</fullName>
        <description>/ If a class 1 complaint did trigger a return or replacment order, the complaint needs to be referenced in the order</description>
        <label>Complaint</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R00ND0000003MrGfMAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Order Header / VBAK-WAERK /</description>
        <label>Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>/</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00ND0000003MrGaMAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <description>Order Header / VBKD-BSTDK /</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>Order Header / VBAK-VBELN Sales Document / SAP Order number</description>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <description>/ Status of the order derived from the status of the attached order items and deliveries.
OpenItem: define the exact rules for deriving the order status</description>
        <label>Order Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderTypeDesc__c</fullName>
        <description>Order Header / TVAKT-BEZEI /</description>
        <label>Order Type Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <description>Order Header / VBAK-AUART / Refers to the related order process (e.g. Return Order, Replacment Order, …)</description>
        <label>Order Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <description>/</description>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderNumber__c</fullName>
        <description>Order Header / VBKD-BSTKD / Order number defined and entered by the customer</description>
        <label>Purchase Order Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrg__c</fullName>
        <description>Order Header / VBAK-VKORG /</description>
        <label>Sales Organization</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapCustomerNumber__c</fullName>
        <description>Order Header / VBAK-KUNNR / Optional  technical field. Not shown in UI</description>
        <label>SAP Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OrderType__c</columns>
        <columns>OrderStatus__c</columns>
        <columns>Customer__c</columns>
        <columns>Patient__c</columns>
        <columns>SalesOrg__c</columns>
        <columns>PurchaseOrderNumber__c</columns>
        <columns>Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>